fix button appearance on ios devices

--- a/css/style.css
+++ b/css/style.css
@@ -446,6 +446,7 @@ body {
 .form input[type="submit"] {
   margin: 3rem auto;
   display: block;
+  -webkit-appearance: none;
 }
 
 .form p {
